# rustweather

./: .gitignore  README.md  pyproject.toml
python/rustweather/: __init__.py  cli.py  core.py  models.py  plotting.py
