[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rustweather"
version = "0.1.0"
description = "One install. One line. Every weather workflow. Powered by Rust."
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["weather", "meteorology", "rust", "hrrr", "gfs", "plotting"]
dependencies = [
    "numpy>=1.20",
    "pandas>=2.0",
    "xarray>=2023.1",
    "matplotlib>=3.5",
    "cfrust>=0.1.0",
    "rusbie>=0.1.0",
    "metrust>=0.3.0",
    "rustplots>=0.1.0",
    "pyproj>=3.0",
]

[project.scripts]
wx = "rustweather.cli:main"

[tool.setuptools.packages.find]
where = ["python"]
